tests/basic/check/not_neg/140.pan
not : (x:bool) -> {y:bool|y = ~x}
assert : { b:ğ”¹ | b = true } â†’ ğŸ™

f140 : unit
f140 = let b = not true in assert b

